@@ -3,7 +3,7 @@ Symbol table for image:
   Num Buc:    Value  Size   Type   Bind Vis      Ndx Name
    ..  ..: ........     0  NOTYPE GLOBAL DEFAULT ABS _edata
    ..  ..: .......0    20    FUNC GLOBAL DEFAULT   6 lib_func1
-   ..  ..: .......0     2  THUMB_FUNC GLOBAL DEFAULT   6 lib_func2
+   ..  ..: .......1     2    FUNC GLOBAL DEFAULT   6 lib_func2
    ..  ..: ........     0  NOTYPE GLOBAL DEFAULT ABS _bss_end__
    ..  ..: ........     0  OBJECT GLOBAL DEFAULT ABS _DYNAMIC
    ..  ..: ........     0  NOTYPE GLOBAL DEFAULT ABS __bss_end__
